--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nengfei.app"
-    android:versionCode="9"
-    android:versionName="2.1.3" >
+    android:versionCode="11"
+    android:versionName="10.1" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -104,6 +104,7 @@
         </activity>
         <activity
             android:name=".StatisticsActivity"
+              android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
             android:label="@string/app_name" >
         </activity>
         <activity
